# cecv

./: README.md
ConnectedComponentsLabeling/: ccl.cpp
DisplayImage/: DisplayImage.cpp  readme.txt
FreqFilter/: freqfilter.cpp  freqfilter.m
MatTest/: main.cpp  mat_test.cpp
Morphological/: main.cpp
MyanmarCentroid/: MyanmarCentroid.cpp
cbimg/: cbimg.cbp  cbimg.depend  main.cpp
cbimg2/: cbimg2.cbp  cbimg2.depend
color/: CMakeLists.txt  color.cpp
deblur/: CMakeLists.txt  deblur.cpp
facedetection/: main.cpp
filter2D/: main.cpp
harrisCorners/: harriscorners.cpp
img_Qt/: DisplayImageQt.pro  main.cpp
img_wins_vs2015_x64/: img_wins.sln
img_wins_vs2015_x64/img_wins/: img_wins.vcxproj  main.cpp
imrotate6dof/: CMakeLists.txt  imRotate6DoF.cpp
smooth/: main.cpp
templatematching/: templatematching.cpp
threshold/: main.cpp
vcap/: main.cpp
